--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/responsive.css">
+
   </head>
   <body>
     <div id="page-home">
