create point js
criado a comunição com a api do ibge populando os options com estado e cidade

--- a/create-point.html
+++ b/create-point.html
@@ -49,6 +49,7 @@
                     <select name="uf">
                         <option value="">Selecione o estado</option>
                     </select>
+                    <input type="hidden" name="state">
                 </div>
                 <div class="field"> 
                     <label for="city">Cidade</label>
@@ -70,4 +71,5 @@
       </form>
     </div>
   </body>
+  <script src="./scripts/create-point.js"></script>
 </html>
