--- a/index.html
+++ b/index.html
@@ -8,12 +8,16 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap"
       rel="stylesheet"
     />
+
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./styles/home.css">
+    <link rel="stylesheet" href="./styles/modal.css">
+
     <link rel="stylesheet" href="./styles/responsive.css">
 
   </head>
   <body>
+
     <div id="page-home">
       <div class="content">
         <header>
@@ -32,5 +36,25 @@
         </main>
       </div>
     </div>
+
+    <div id="modal" class="hide">
+      <div class="content">
+        <div class="header">
+          <h1>Pontos de Coleta</h1>
+          <a href="#">Fechar</a>
+        </div>
+        <form action="">
+          <label for="search">Cidade</label>
+          <div class="search field">
+            <input type="text" name="search" placeholder="Pesquise por cidade">
+            <button>
+              <img src="./assets/search.svg" alt="Buscar">
+            </button>
+          </div>
+        </form>
+      </div>
+    </div>
+
+    <script src="./scripts/index.js"></script>
   </body>
 </html>
