--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="content">
         <header>
           <img src="./assets/logo.svg" alt="Logomarca Ecoleta" />
-          <a href="#"> <span></span> Cadastre um ponto de coleta</a>
+          <a href="/create-point.html"> <span></span> Cadastre um ponto de coleta</a>
         </header>
         <main>
           <h1>Seu marketplace de coleta de resíduos</h1>
@@ -43,7 +43,7 @@
           <h1>Pontos de Coleta</h1>
           <a href="#">Fechar</a>
         </div>
-        <form action="">
+        <form action="/search-results.html">
           <label for="search">Cidade</label>
           <div class="search field">
             <input type="text" name="search" placeholder="Pesquise por cidade">
