--- a/create-point.html
+++ b/create-point.html
@@ -16,7 +16,7 @@
     <div id="page-create-point">
       <header>
         <img src="./assets/logo.svg" alt="Logomarca Ecoleta" />
-        <a href="#"> <span></span> Voltar para home</a>
+        <a href="/index.html"> <span></span> Voltar para home</a>
       </header>
       
       <form action="">
